<resources>
    <string name="app_name">PetroApp</string>
    <string name="action_settings">Settings</string>
    <string name="preference_file_name">saved_codes.txt</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <!-- Strings for fb sdk app level -->
    <string name="facebook_app_id" translatable="false">1691462227779870</string>


    <!-- Login Register Activity -->
    <string name="title_activity_login_register">Dcoder</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="google_signin_button_text_small">Sign In</string>
    <string name="google_signin_button_text_long">Sign In with Google</string>
    <string name="signin_btn_text">Sign In</string>
    <string name="register_name_hint">Name</string>
    <string name="register_btn_text">Register</string>

    <string name="session_id">session_id</string>
    <string name="internet_error">Network error please try again</string>
    <string name="preference_file_key">prefs.xml</string>
    <string name="carno_hint">Car No.</string>
    <string name="uid">email</string>
    <string name="google_maps_key_debug">AIzaSyC3Ab-DZLhI0kvEQnRL3z-6lFSoYkRYeXA</string>
    <string name="service_not_available">Service Not Available</string>
    <string name="invalid_lat_long_used">Invalid lat long used</string>
    <string name="no_address_found">No address found</string>
    <string name="address_found">address_found</string>
    <string name="no_geocoder_available">GeoCoder not available</string>
</resources>
