<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_login"
    android:fitsSystemWindows="true" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <android.support.design.widget.TabLayout
            android:id="@+id/tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:background="@android:color/transparent"
            android:theme="@style/AppTheme.AppBarOverlay"
            app:tabMode="scrollable" />

        <ScrollView
            android:id="@+id/scrollView_login"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/login_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/activity_login_margin"
                android:layout_marginRight="@dimen/activity_login_margin"
                android:orientation="vertical"
                android:paddingTop="32dp">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/email_input_layout"
                    style="@style/TextLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="8dp">

                    <EditText
                        android:id="@+id/et_email_login"
                        style="@style/EditTextWhite"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/email_hint" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/password_input_layout"
                    style="@style/TextLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/email_input_layout"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="8dp">

                    <EditText
                        android:id="@+id/et_password_login"
                        style="@style/EditTextWhite"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/password_hint"
                        android:imeActionId="@+id/login"
                        android:imeOptions="actionUnspecified"
                        android:inputType="textPassword" />

                </android.support.design.widget.TextInputLayout>

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/btn_login"
                    style="@style/MyAppCompatButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/password_input_layout"
                    android:layout_marginTop="16dp"
                    android:text="@string/signin_btn_text" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_marginBottom="24dp"
                    android:layout_marginTop="64dp"
                    android:orientation="horizontal">

                    <com.facebook.login.widget.LoginButton
                        android:id="@+id/btn_fb"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginRight="1dp"
                        android:layout_weight="0.5"
                        android:gravity="center_vertical|center_horizontal" />

                    <com.google.android.gms.common.SignInButton
                        android:id="@+id/btn_google"
                        android:layout_width="0dp"
                        android:layout_height="33dp"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="1dp"
                        android:layout_weight="0.5"
                        android:gravity="center_vertical|center_horizontal" />
                </LinearLayout>
            </LinearLayout>
        </ScrollView>

        <ScrollView
            android:id="@+id/scrollView_register"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone">

            <LinearLayout
                android:id="@+id/register_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_login_margin"
                android:layout_marginRight="@dimen/activity_login_margin"
                android:orientation="vertical"
                android:paddingTop="32dp">

                <android.support.design.widget.TextInputLayout
                    style="@style/TextLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="8dp">

                    <EditText
                        android:id="@+id/et_name_register"
                        style="@style/EditTextWhite"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/register_name_hint" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    style="@style/TextLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="8dp">

                    <EditText
                        android:id="@+id/et_email_register"
                        style="@style/EditTextWhite"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/email_hint" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    style="@style/TextLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="8dp">

                    <EditText
                        android:id="@+id/et_carno_register"
                        style="@style/EditTextWhite"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/carno_hint" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    style="@style/TextLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="8dp">

                    <EditText
                        android:id="@+id/et_pass_register"
                        style="@style/EditTextWhite"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/password_hint"
                        android:imeActionId="@+id/login"
                        android:imeOptions="actionUnspecified"
                        android:inputType="textPassword" />

                </android.support.design.widget.TextInputLayout>

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/btn_register"
                    style="@style/MyAppCompatButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="24dp"
                    android:text="@string/register_btn_text" />
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>
